<resources>
    <string name="app_name">Qonversion Sample App</string>
    <string name="build_in_app_subscriptions_without_server_code">Build in-app subscriptions\n without server code</string>
    <string name="welcome_text">Welcome to Qonversion sample\u00A0app.</string>
    <string name="google_sign_in_explanation">Please use the\u00A0sign-in with\u00A0Google option to\u00A0test cross-platform subscription management.</string>
    <string name="subscribe_for">Subscribe for</string>
    <string name="buy_for">Buy for</string>
    <string name="loading">Loading…</string>
    <string name="logout">Logout</string>
    <string name="skip">Skip</string>
    <string name="auth_with_google">Authorize with Google</string>
    <string name="check_active_entitlements">Check active entitlements</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="successfully_purchased">Successfully purchased</string>
    <string name="nothing_to_restore">Nothing to restore</string>
    <string name="entitlement_id">Entitlement Id</string>
    <string name="product_id">Product Id</string>
    <string name="renew_state">Renew state</string>
    <string name="active_entitlements">Active entitlements</string>
    <string name="offerings">Main Offering products</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="application_icon">Application icon</string>
    <string name="channel_name">qonversion</string>
    <string name="firebase_web_client_id">11599271839-jg1njos9hp2d07jg7d3oqi523io0pdr6.apps.googleusercontent.com</string>

</resources>
