<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

  <ImageView
      android:id="@+id/logoView"
      android:contentDescription="@string/application_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="60dp"
      android:layout_marginRight="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_qonversion" />

  <TextView
      android:id="@+id/description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:text="@string/build_in_app_subscriptions_without_server_code"
      android:textColor="@color/colorBlack"
      android:textSize="26sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/logoView" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/buttonLogin"
      style="@style/Widget.MaterialComponents.Button"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="40dp"
      android:layout_marginRight="8dp"
      android:text="@string/auth_with_google"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textColor="@color/colorWhite"
      app:backgroundTint="@color/colorQonversionBlue"
      app:cornerRadius="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/description" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/buttonSkip"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="60dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:text="@string/skip"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>